--- a/ui/src/i18n/es.json
+++ b/ui/src/i18n/es.json
@@ -17,7 +17,7 @@
     "accessories.control.label_fan": "Ventilador",
     "accessories.control.label_heat": "Calor",
     "accessories.control.label_home": "Home",
-    "accessories.control.label_jammed": "Jammed",
+    "accessories.control.label_jammed": "Atascado",
     "accessories.control.label_light": "Luz",
     "accessories.control.label_locked": "Bloqueado",
     "accessories.control.label_mute": "Mute",
@@ -165,7 +165,7 @@
     "plugins.manage.label_manual_update_required": "Manual Update Required",
     "plugins.manage.label_online_updates_not_supported_on_windows": "Online updates are not supported on Windows. You will need to upgrade Homebridge Config UI X manually after stopping the Homebridge service.",
     "plugins.manage.label_uninstall": "Desinstalar",
-    "plugins.manage.label_uninstalled": "Eliminado",
+    "plugins.manage.label_uninstalled": "Desinstalado",
     "plugins.manage.label_update": "Actualizar",
     "plugins.manage.label_updated": "Actualizado",
     "plugins.manage.label_upgrade": "Actualizar",
